# -GPT

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.frontend  Dockerfile.single  Makefile  README.md  V1_STATUS.md  analyze_wf_metrics.py  docker-compose.monitoring.yml  docker-compose.single.yml  docker-compose.yml  equity_curve_ema.csv  fetch_binance_data.py  ml_equity_curve.csv  ml_equity_curve_15m_test.csv  ml_equity_curve_15m_wf.csv  ml_model_comparison_15m.csv  ml_rf_backtest_thresholds_15m.csv  ml_rf_from_pipeline_15m.csv  ml_rf_threshold_sweep_15m.csv  ml_trades.csv  ml_trades_15m_test.csv  ml_trades_15m_wf.csv  ml_wf_metrics_15m.csv  mutmut.ini  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  rule_equity_curve_15m.csv  rule_overlay_sweep_15m.csv  rule_trades_15m.csv  run_analyze_rule_trades_15m.py  run_backtest.py  run_build_features_15m.py  run_fetch_external_15m.py  run_from_config.py  (+15 more)
.claude/: settings.local.json
config/: ema_example.yml  ml_example.yml  rsi_example.yml  system.base.yml  system.live.yml  system.research.yml  system.yml
data/: AIAUSDT_P_1h.csv  AIAUSDT_funding_15m.csv
docs/: README.md  architecture.md  core_config_profiles.md  howto_add_strategy.md  market_structure_integration.md  strategy_search_jobs.md  testing.md
finantradealgo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
migrations/: README.md  env.py
monitoring/: README.md  prometheus.yml  status_api.py
research/: __init__.py  grid_search.py
scripts/: __init__.py  bench_event_bars.py  (+79 more)
(+751 files in other folders)
